--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ certifi==2024.7.4
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+coloredlogs==15.0.1
 contourpy==1.2.1
 cycler==0.12.1
 decorator==5.1.1
@@ -30,13 +31,19 @@ httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 huggingface-hub==0.23.4
+humanfriendly==10.0
 idna==3.7
+imageio==2.34.2
 ipython==8.26.0
 jax==0.4.30
 jaxlib==0.4.30
 jedi==0.19.1
 Jinja2==3.1.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
+lazy_loader==0.4
+llvmlite==0.43.0
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -48,6 +55,7 @@ ml-dtypes==0.4.0
 mpmath==1.3.0
 multidict==6.0.5
 networkx==3.3
+numba==0.60.0
 numpy==1.23.5
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
@@ -61,8 +69,10 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.5.82
 nvidia-nvtx-cu12==12.1.105
+onnxruntime==1.18.1
 opencv-contrib-python==4.10.0.84
 opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
 opt-einsum==3.3.0
 orjson==3.10.6
 packaging==24.1
@@ -70,6 +80,8 @@ pandas==2.2.2
 parso==0.8.4
 pexpect==4.9.0
 pillow==10.4.0
+platformdirs==4.2.2
+pooch==1.8.2
 prompt_toolkit==3.0.47
 protobuf==3.20.1
 psutil==6.0.0
@@ -79,16 +91,21 @@ pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
+PyMatting==1.1.12
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.1
+referencing==0.35.1
 regex==2024.5.15
+rembg==2.0.57
 requests==2.32.3
 rich==13.7.1
+rpds-py==0.18.1
 safetensors==0.4.3
+scikit-image==0.24.0
 scipy==1.14.0
 seaborn==0.13.2
 shellingham==1.5.4
@@ -100,6 +117,7 @@ starlette==0.37.2
 sympy==1.12.1
 tensorboard==2.17.0
 tensorboard-data-server==0.7.2
+tifffile==2024.7.2
 tokenizers==0.19.1
 torch==2.3.1
 torchvision==0.18.1
