--- a/requirements.txt
+++ b/requirements.txt
@@ -83,7 +83,7 @@ pillow==10.4.0
 platformdirs==4.2.2
 pooch==1.8.2
 prompt_toolkit==3.0.47
-protobuf==3.20.1
+protobuf
 psutil==6.0.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
